--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="question">
       <h3>Restituez votre devoir sous forme de page web conçue de façon responsable. Url à indiquer
         ci-dessous. </h3>
-      <p></p>
+      <a href="https://developpement-durable-7yr3gxgoq-bakarykone.vercel.app/">ce site internet</a>
     </div>
 
   </section>
